[gd_scene load_steps=10 format=3 uid="uid://ctuqhy2otx3t7"]

[ext_resource type="Script" uid="uid://byqpm333qrqkj" path="res://scenes/level.gd" id="1_2r41h"]
[ext_resource type="PackedScene" uid="uid://bs72ogkvdd7d6" path="res://addons/proto_controller/proto_controller.tscn" id="2_klq6b"]
[ext_resource type="PackedScene" uid="uid://gcx1thdw2t6x" path="res://scenes/elevator.tscn" id="3_b121j"]
[ext_resource type="Texture2D" uid="uid://cnr6yinr2pqmp" path="res://assets/ui/e.png" id="5_olg7q"]
[ext_resource type="Texture2D" uid="uid://dg4vx614358o5" path="res://assets/ui/wasd.png" id="6_t1rx8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_8iemx"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_5vw27"]
sky_material = SubResource("ProceduralSkyMaterial_8iemx")

[sub_resource type="Environment" id="Environment_64w2a"]
background_mode = 1
sky = SubResource("Sky_5vw27")
ambient_light_source = 1
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_fpun6"]
size = Vector3(5, 3, 3)

[node name="Level" type="Node3D"]
script = ExtResource("1_2r41h")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_64w2a")

[node name="Player" parent="." instance=ExtResource("2_klq6b")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74227e-08, 0, -1, 20, 0.4, 20)
collision_mask = 30
can_freefly = true

[node name="elevator" parent="." instance=ExtResource("3_b121j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.8, 2, -25.1)

[node name="ElevatorArea" type="Area3D" parent="elevator"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="elevator/ElevatorArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.1)
shape = SubResource("BoxShape3D_fpun6")

[node name="ControlGuide" type="CanvasLayer" parent="."]

[node name="e" type="TextureRect" parent="ControlGuide"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.5
offset_top = -106.0
offset_right = 132.5
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_olg7q")
expand_mode = 1

[node name="wasd" type="TextureRect" parent="ControlGuide"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.5
offset_top = -106.0
offset_right = 132.5
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_t1rx8")
expand_mode = 1

[connection signal="change_floor" from="elevator" to="." method="_on_elevator_change_floor"]
[connection signal="body_entered" from="elevator/ElevatorArea" to="." method="_on_elevator_area_body_entered"]
[connection signal="body_exited" from="elevator/ElevatorArea" to="." method="_on_elevator_area_body_exited"]
